LIB-347 Fix AskUs footer link smaller breakpoint alignment

--- a/custom/modules/unb_libraries_askus/css/askus.css
+++ b/custom/modules/unb_libraries_askus/css/askus.css
@@ -66,7 +66,6 @@
 }
 .askus-footer a {
     margin: auto .25rem;
-    padding: .25rem;
 }
 .askus-footer a:focus,
 .askus-footer a:hover {
@@ -74,7 +73,6 @@
     text-decoration: none;
 }
 .askus-footer span:not(.sr-only) {
-    display: inline-block;
     margin-bottom: .5rem;
     margin-left: 8px;
     margin-right: 8px;
